Cleanup some more

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
     </nav>
     </div>
 
-    <p class="disclaimer">This is an alpha (demo) website for the City of Oakland, created by Code for America. The information provided may be inaccurate, so please ensure you visit Oaklandnet.com to verify anything that you read here. &copy; City of Oakland, Code for America, 2014</p>
+    <p class="disclaimer">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus elementum eros quis blandit. Maecenas ut ornare erat. Cras dictum ultricies rhoncus. Morbi tincidunt elit ac ullamcorper sodales.</p>
   </div>
 </footer>
 
