Start reducing the content. Remove logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,13 +9,13 @@
     </div>
     <nav class="main-nav">
     	<ul>
-    		<li>Government</li>
+    		<li><a href="/government">Government</a></li>
     		<li><a href="/jobs">Jobs</a></li>
     		<li><a href="/public-safety">Public Safety</a></li>
-    		<li>Licensing &amp; Permits</li>
-    		<li>Utilities &amp; Streets</li>
+    		<li><a href="">Licensing &amp; Permits</a></li>
+    		<li><a href="">Utilities &amp; Streets</a></li>
     		<li><a href="/transport">Transport</a></li>
-            <li>Parks &amp; Recreation</li>
+            <li><a href="">Parks &amp; Recreation</a></li>
     	</ul>
     </nav>
   </div>
