--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -95,11 +95,11 @@
 .site-footer {
     border-top: 3px solid #31660f;
     padding: $spacing-unit 0;
-    padding-top:300px;
+    /** padding-top:300px; **/
     background-color:#3ab344;
-    background-image:url("media/oakland-logo.png");
+    /** background-image:url("media/oakland-logo.png");
     background-repeat:no-repeat;
-    background-position:center 20px;
+    background-position:center 20px; **/
 }
 
 .footer-heading {
