--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -4,7 +4,7 @@ layout: default
 <div class="post">
 
   <header class="post-header">
-  	<p class="breadcrumb"><a href="/">Home</a> &gt; <a href="/{{ page.categories }}">{{ page.categories }}</a></p>
+  	<p class="breadcrumb"><a href="/">Home</a> &gt; <a href="/{{ page.section }}">{{ page.title }}</a></p>
     <h1 class="post-title">{{ page.title }}</h1>
     
   </header>
