--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -4,7 +4,7 @@ layout: default
 <div class="category">
 
   <header class="post-header">
-  	<p class="breadcrumb"><a href="/">Home</a> > <a href="/{{ page.category }}">{{ page.category }}</a></p>
+  	<p class="breadcrumb"><a href="/">Home</a> &gt; <a href="/{{ page.section }}">{{ page.title }}</a></p>
     <h1 class="post-title">{{ page.title }}</h1>
     
   </header>
