Hide extra search on small screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -486,6 +486,9 @@
         margin-top:0; 
         padding-top:0;
     }
+    .search-main{
+        display:none;
+    }
     .disclaimer{
         margin:0 1em;
     }
