Move top level IA to own data file

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     </div>
     <nav class="main-nav">
     	<ul>
-            {% for navigation_hash in site.navigation %}
+            {% for navigation_hash in site.data.categories.toplevel %}
                 {% for navigation in navigation_hash %}
                     <li><a href="/{{ navigation[0] }}">{{ navigation[1] }}</a></li>
                 {% endfor %}
