Remove unncessary dupe of url value

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 
     <div class="search">
         <form class="search-global" id="search-global" action="https://www.google.com/search" method="get" role="search">
-            <input type="hidden" name="as_sitesearch" value="{{site.domain}}" />
+            <input type="hidden" name="as_sitesearch" value="{{site.url}}" />
             <input type="search" placeholder="pay parking ticket" /><input type="submit" value="Search" type="submit" />
         </form>
     </div>
