Created a new page to pull out the pattern lib onto + stub layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,5 @@
 <header class="site-header">
-
-  <div class="wrapper">
-
-    <h1 class="site-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+    <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
 
     <div class="search">
         <form class="search-global" id="search-global" action="https://www.google.com/search" method="get" role="search">
@@ -17,7 +14,6 @@
             {% endfor %}
     	</ul>
     </nav>
-  </div>
-
-    
 </header>
+
+
