--- a/css/main.scss
+++ b/css/main.scss
@@ -45,5 +45,6 @@ $on-laptop:        900px;
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "event"
 ;
