--- a/_sass/_event.scss
+++ b/_sass/_event.scss
@@ -1,36 +1,85 @@
-.event-info {
-	@extend %vertical-rhythm;
-	background-color: #f5f5f5;
-	font-size: $small-font-size;
-	padding: $spacing-unit/2;
-	width: 45%;
-	margin-left: 5%;
-	float: right;
-
-	h1 {
-		font-weight: bold;
-		margin-bottom: 0;
-		font-size: .8rem;
-	}
-
-	> *:last-child {
-		margin-bottom: 0;
-	}
-
-
-	@include media-query($on-laptop) {
-		float: none;
-		width: auto;
-		margin-left: 0;
-	}
+.event-title {
+	font-weight: bold;
+	margin-bottom: 2em;
 }
 
-.address {
-	@extend %vertical-rhythm;
-	p {
-		margin: {
-			top: 0;
-			bottom: 0;
+.event-content {
+	h1 {
+		color: #cf1b41;
+		font-size: 22px;
+	}
+	h2 {
+		margin-top: 1.5em;
+		font-size: 18px;
+	}
+
+	a {
+		color: inherit;
+		text-decoration: underline; 
+	}
+
+	table {
+		border: #f5f5f5;
+		thead {
+			th {
+				text-align: left;
+			}
+		}
+		td, th {
+			text-align: left;
+			padding: .2em .8em;
+		}
+	}
+	.info-box {
+		box-sizing: border-box;
+		background-color: #f5f5f5;
+		width: 40%;
+		float: right;
+		clear: both;
+		margin-bottom: $spacing-unit/2;
+		padding: $spacing-unit/2;
+		margin-left: $spacing-unit/2;
+		font-size: $small-font-size;
+
+		@include media-query($on-palm) {
+			float: none;
+			width: 100%;
+			margin-left: 0;
+		}
+
+		h1 {
+			margin-top: 0;
+			font-size: 1rem;
+			color: inherit;
+		}
+
+		p {
+			margin: 0;
+		}
+
+		> :last-child {
+			margin-bottom: 0;
+		}
+
+	}
+
+	.event-poster {
+		padding: 0;
+	}
+
+	.event-callout {
+		color: #fff;
+		background-color: #cf1b41;
+		padding: $spacing-unit/2;
+		margin: $spacing-unit 0;
+		font-size: $small-font-size;
+		h1 {
+			color: inherit;
+			margin-top: 0;
+		}
+		a {
+			color: inherit;
+			text-decoration: underline;
 		}
 	}
 }
